# templated_knuth_bendix

./: .gitmodules  CMakeLists.txt  README.md  knuth_bendix.hpp  test.cpp
